* set description to absolute positioning to fix cover art out of window on small screens

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     text-align: right;
     padding-right: 10px;
     font-size: 12px;
+    position: absolute;
 }
 #title {
     color: white;
